--- a/package.json
+++ b/package.json
@@ -1,1 +1,13 @@
-{"name": "chefsire-web","version": "1.0.0","private": true,"scripts": {"start": "react-scripts start","build": "react-scripts build"},"dependencies": {"react": "^18.2.0","react-dom": "^18.2.0","react-scripts": "^5.0.1"}}
+{
+  "name": "chefsire-web",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-scripts": "^5.0.1"
+  }
+}
