--- a/web/package.json
+++ b/web/package.json
@@ -1,1 +1,14 @@
-{"name": "chefsire","version": "1.0.0","private": true,"workspaces": ["shared","web","server","mobile"]}
+{
+  "name": "chefsire-web",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-scripts": "^5.0.1",
+    "react-dom": "^17.0.2"
+  }
+}
