--- a/web/package.json
+++ b/web/package.json
@@ -2,13 +2,10 @@
   "name": "chefsire-web",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
-  },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-scripts": "^5.0.1",
-    "react-dom": "^17.0.2"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
